# handle_packetss

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  英語.md
docs/: このプロジェクトのために学ぶべきこと.md
docs/knowledge/DOD/: README.md  aos_vs_soa_benchmark.rs
docs/knowledge/alignment-and-padding/: README.ja.md  README.md  demo.rs
docs/knowledge/stack-vs-heap-and-locality/: README.md  address_visualization.rs  false_sharing.rs  the_cache_miss_benchmark.rs
docs/plan/: json_sample.md  lib.rs.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/game/play/: page.tsx
frontend/app/game/select/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/components/: Controls.tsx  KPISummaryCards.tsx  LogContainer.tsx  MainTrafficGraph.tsx  NodeOverlay.tsx  PacketCanvas.tsx  ServiceStatusList.tsx  StatsDisplay.tsx  StatusIndicator.tsx  app-header.tsx  app-sidebar.tsx  index.ts  job.tsx
frontend/components/ui/: sidebar.tsx
frontend/hooks/: index.ts  useStageApi.ts  useStageManager.ts  useWasm.ts  useWebSocket.ts
frontend/types/: stage.ts
server/: go.mod  main.go  manifest.json
server/stages/: BlueBull1.json  stage1.json
simulation/: Cargo.toml  README.md
simulation/src/: lib.rs  renderer.rs  shader.wgsl  simulation.rs
web/: index.html
